build: Add Error Prone and NullAway to build
Compiling with JDK 21 now because error prone requires this.
Resulting JAR still compatible with 17